--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			grid-template-columns: 7fr 1fr;
 			height: 100vh;
 		}
-		.list {grid-area: 1 / 2 / 2 / 3};
+		.list {grid-area: 1 / 2 / 2 / 3; overflow-y: scroll;}
 		#container {grid-area: 1 / 1 / 2 / 2;}
 
 	</style>
@@ -33,6 +33,7 @@
 				<li><a href="?file=01base">01: Base</a></li>
 				<li><a href="?file=02equations">Equations</a></li>
 				<li><a href="?file=03equations">More Equations</a></li>
+
 				<li><h3>Colours</h3></li>
 				<li><a href="?file=04hurt">Hurt</a></li>
 				<li><a href="?file=05sunset">Sunset</a></li>
@@ -43,7 +44,8 @@
 				<li><a href="?file=10mouse">Mouse</a></li>
 				<li><a href="?file=11rainbow">Rainbow</a></li>
 				<li><a href="?file=12spinning">Spinning</a></li>
-				<li><h4>Shapes (07)</h4></li>
+
+				<li><h3>Shapes (07)</h3></li>
 				<li><a href="?file=13shape_rectangleFunc">Rectangle</a></li>
 				<li><a href="?file=14screenOutline">Screen Outline</a></li>
 				<li><a href="?file=15shape_smoothFloor">Smooth Floor</a></li>
@@ -52,11 +54,22 @@
 				<li><a href="?file=18shape_zen">Zen</a></li>
 				<li><a href="?file=19shape_flower">Flower</a></li>
 				<li><a href="?file=20polarshape">Polar Shape</a></li>
+
 				<li><h3>Transforms</h3></li>
 				<li><a href="?file=21translate">Translate</a></li>
 				<li><a href="?file=22rotate">Rotate</a></li>
 				<li><a href="?file=23scale">Scale</a></li>
-				<li><a href="?file=24patterns">Patterns</a></li>
+
+				<li><h3>Patterns</h3></li>
+				<li><a href="?file=24patterns">Pattern 1</a></li>
+				<li><a href="?file=25patterns">Pattern 2</a></li>
+				<li><a href="?file=26patterns">Pattern 3</a></li>
+				<li><a href="?file=27patterns">Pattern 4</a></li>
+				<li><a href="?file=28patterns">Pattern 5</a></li>
+				<li><a href="?file=29patterns">Pattern 6</a></li>
+				<li><a href="?file=30patterns">Pattern 7</a></li>
+				<li><a href="?file=31patterns">Pattern 8</a></li>
+
 				<li><a href="?file=raymarch">Raymarch</a></li>
 			</ul>
 		</section>
